--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.4.1
   camera: ^0.11.1
+  cloud_firestore: ^5.6.6
+  connectivity_plus: ^6.1.4
+  country_flags: ^3.2.0
+  cupertino_icons: ^1.0.8
+  external_path: ^2.0.1
   firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
   firebase_storage: ^12.4.5
   flutter:
     sdk: flutter
-
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
